NTI-10862 - fix required layout issues

--- a/src/overview/lesson/common/GridCompleteIcon.scss
+++ b/src/overview/lesson/common/GridCompleteIcon.scss
@@ -54,6 +54,8 @@
 	border: solid 3px white;
 	background-color: rgba(0, 0, 0, 0.38);
 	box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
+	line-height: 0;
+	display: inline-block;
 
 	.check {
 		color: white;
